Fix tag name vertical alignment in full post

--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -482,7 +482,6 @@
 	margin: 0;
 	padding: 0;
 	position: relative;
-		top: -2px;
 	overflow: hidden;
 	white-space: nowrap;
 	width: 100%;
